--- a/src/index.css
+++ b/src/index.css
@@ -7,23 +7,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+code,.container-div h3 {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 /*  question component styling */
 .container-div{
   background: rgba(18, 63, 105, 0.897);
-  display:flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
 
 }
 .container-div p{
   font:900 20px "Lucida Console", "Courier New", monospace;
   color:#fff;
   margin: 1em 0;
+}
+.container-div h3,.code{
+  color:rgb(10, 146, 151);
+  text-align:center;
 }
 .middle-div{
   background:rgba(240, 243, 245, 0.897) ;
@@ -34,11 +34,43 @@ code {
 }
 .bottom-div{
   background: rgba(161, 181, 201, 0.644);
-  display:flex;
-  justify-content: space-between;
+}
+  /*Login Component  */
 
+   .login,
+   .select-user,
+   .container-div,
+   .bottom-div,
+   .add-question{
+    display: flex;
 
-
+  }
+  .login,.container-div,.add-question{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .bottom-div p{
+    flex: 80%;
+  }
+  .select-user{
+    justify-content: space-around;
+    width: 30vw;
+  }
+  .select:hover{
+    cursor: pointer;
+    background: rgba(161, 181, 201, 0.644);
+  }
+/* add question component*/
+.add-question div,
+ .add-question h1{
+   width: 80vw;
 
 }
+
+
+
+
+
+
 
