--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,11 @@ code,.container-div h3 {
   color:#fff;
   margin: 1em 0;
 }
-.container-div h3,.code{
+.container-div h3,
+.code,
+.add-question h1,
+.text
+{
   color:rgb(10, 146, 151);
   text-align:center;
 }
@@ -32,7 +36,9 @@ code,.container-div h3 {
   color: rgba(18, 63, 105, 0.897);
   font:  bold 20px Georgia, serif;
 }
-.bottom-div{
+.bottom-div,
+.add-question form
+{
   background: rgba(161, 181, 201, 0.644);
 }
   /*Login Component  */
@@ -41,7 +47,9 @@ code,.container-div h3 {
    .select-user,
    .container-div,
    .bottom-div,
-   .add-question{
+   .add-question,
+   .unanswered
+   {
     display: flex;
 
   }
@@ -67,6 +75,9 @@ code,.container-div h3 {
    width: 80vw;
 
 }
+/* question details */
+
+
 
 
 
